FIX: valign attribute not respected
_normalize.scss hardcoded `vertical-align: top;` for `td` and `th`. This breaks setting `<column valign="bottom>"`.

--- a/scss/components/_normalize.scss
+++ b/scss/components/_normalize.scss
@@ -82,6 +82,5 @@ table, tr, td, th {
   padding-right: 0;
   padding-bottom: 0;
   padding-left: 0;
-  vertical-align: top;
   text-align: left;
 }
